--- a/legal/contributing.html
+++ b/legal/contributing.html
@@ -124,7 +124,7 @@
         <div class="container mx-auto flex justify-between items-center">
           <!-- Header Title -->
           <div>
-            <a href="/CDA-Project/index.html" class="block">
+            <a href="../index.html" class="block">
               <h1 class="text-2xl font-bold flex items-center"> DART Project <span class="text-amber-400 text-xs ml-2 align-top">BETA</span>
               </h1>
               <p class="text-sm text-gray-200">Tracking Threats, Protecting Communities</p>
@@ -178,7 +178,7 @@
           <ol class="inline-flex items-center space-x-2">
             <!-- Home Breadcrumb -->
             <li class="inline-flex items-center">
-              <a href="/CDA-Project/index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
+              <a href="../index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                 <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
                 </svg> Home </a>
@@ -195,26 +195,26 @@
     <!-- Main Content -->
     <div class="container mx-auto px-4 py-8">
       <div class="bg-white p-6 rounded-lg shadow-lg">
-        <h2 class="text-3xl font-bold text-indigo-700 mb-6">Contributing to CDA-Project</h2>
+        <h2 class="text-3xl font-bold text-indigo-700 mb-6">Contributing to DART-Project</h2>
         <p class="text-gray-600 mb-4">First off, thanks for taking the time to contribute!</p>
         <p class="text-gray-600 mb-4">All types of contributions are encouraged and valued. Please make sure to read the relevant section before making your contribution. It will make it a lot easier for me and smooth out the experience for all involved. The community looks forward to your contributions. 🎉</p>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">Code of Conduct</h3>
-          <p class="text-gray-600 mb-4">This project and everyone participating in it is governed by the <a href="https://github.com/ThatSINEWAVE/CDA-Project/blob/master/CODE_OF_CONDUCT.md" class="text-indigo-600 hover:text-indigo-800">CDA-Project Code of Conduct</a>. By participating, you are expected to uphold this code. Please report unacceptable behavior to <b>EMAIL COMING SOON</b> or via Discord DMs at <b>sinewave_</b>. </p>
+          <p class="text-gray-600 mb-4">This project and everyone participating in it is governed by the <a href="https://github.com/TheDARTProject/.github/blob/main/CODE_OF_CONDUCT.md" class="text-indigo-600 hover:text-indigo-800">DART-Project Code of Conduct</a>. By participating, you are expected to uphold this code. Please report unacceptable behavior to <b>EMAIL COMING SOON</b> or via Discord DMs at <b>sinewave_</b>. </p>
         </div>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">I Have a Question</h3>
-          <p class="text-gray-600 mb-4">Before asking a question, please search for existing <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues" class="text-indigo-600 hover:text-indigo-800">Issues</a> that might help you. If you still need clarification, you can write your question in the issue. It is also advisable to search the internet for answers first. </p>
-          <p class="text-gray-600 mb-4">If you still need to ask a question, open an <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues/new" class="text-indigo-600 hover:text-indigo-800">Issue</a> and provide as much context as possible about what you're running into. </p>
+          <p class="text-gray-600 mb-4">Before asking a question, please search for existing Issues that might help you. If you still need clarification, you can write your question in the issue. It is also advisable to search the internet for answers first. </p>
+          <p class="text-gray-600 mb-4">If you still need to ask a question, open an Issue and provide as much context as possible about what you're running into. </p>
         </div>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">I Want To Contribute</h3>
           <p class="text-gray-600 mb-4">When contributing to this project, you must agree that you have authored 100% of the content, that you have the necessary rights to the content, and that the content you contribute may be provided under the project license.</p>
           <h4 class="text-xl font-semibold text-gray-800 mb-4">Reporting Bugs</h4>
           <p class="text-gray-600 mb-4">Before submitting a bug report, please ensure you are using the latest version and check if the bug has already been reported. Collect information about the bug, including stack traces, OS, platform, and version details.</p>
-          <p class="text-gray-600 mb-4">To submit a bug report, open an <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues/new" class="text-indigo-600 hover:text-indigo-800">Issue</a> and provide detailed steps to reproduce the issue, along with the information you collected. </p>
+          <p class="text-gray-600 mb-4">To submit a bug report, open an Issue and provide detailed steps to reproduce the issue, along with the information you collected. </p>
           <h4 class="text-xl font-semibold text-gray-800 mb-4">Suggesting Enhancements</h4>
-          <p class="text-gray-600 mb-4">Before suggesting an enhancement, ensure the functionality isn't already covered in the documentation and search for existing suggestions. If your idea fits the project's scope, submit an enhancement suggestion as a <a href="https://github.com/ThatSINEWAVE/CDA-Project/issues" class="text-indigo-600 hover:text-indigo-800">GitHub issue</a> with a clear title and detailed description. </p>
+          <p class="text-gray-600 mb-4">Before suggesting an enhancement, ensure the functionality isn't already covered in the documentation and search for existing suggestions. If your idea fits the project's scope, submit an enhancement suggestion as a GitHub issue with a clear title and detailed description. </p>
         </div>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">Styleguides</h3>
@@ -227,7 +227,7 @@
         </div>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">How Can I Contribute?</h3>
-          <p class="text-gray-600 mb-4">Server owners and staff can play a vital role in enhancing this project by contributing their automod logs that help identify and block malicious messages <a href="https://raw.githubusercontent.com/ThatSINEWAVE/CDA-Project/refs/heads/main/docs/images/site-images/Example.png" class="text-indigo-600" target="_blank">like these</a>. These logs, which contain data on URLs and accounts involved in suspicious activities, will be parsed, validated, and added to the database to further strengthen the security measures. </p>
+          <p class="text-gray-600 mb-4">Server owners and staff can play a vital role in enhancing this project by contributing their automod logs that help identify and block malicious messages <a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/site-images/Example.png" class="text-indigo-600" target="_blank">like these</a>. These logs, which contain data on URLs and accounts involved in suspicious activities, will be parsed, validated, and added to the database to further strengthen the security measures. </p>
           <p class="text-gray-600 mb-4">The contributions can be kept anonymous, or if the server owners prefer, they can be credited. Importantly, while the data from the logs will be included in the database, the specific source (the server in which the malicious activity was detected) will not be disclosed on the public-facing site. However, it may be stored in the database for internal purposes.</p>
           <p class="text-gray-600 mb-4">If you're interested, feel free to contact me on Discord at <b>sinewave_</b>, and we can discuss further. </p>
         </div>
