--- a/legal/license.html
+++ b/legal/license.html
@@ -124,7 +124,7 @@
         <div class="container mx-auto flex justify-between items-center">
           <!-- Header Title -->
           <div>
-            <a href="/CDA-Project/index.html" class="block">
+            <a href="../index.html" class="block">
               <h1 class="text-2xl font-bold flex items-center"> DART Project <span class="text-amber-400 text-xs ml-2 align-top">BETA</span>
               </h1>
               <p class="text-sm text-gray-200">Tracking Threats, Protecting Communities</p>
@@ -178,7 +178,7 @@
           <ol class="inline-flex items-center space-x-2">
             <!-- Home Breadcrumb -->
             <li class="inline-flex items-center">
-              <a href="/CDA-Project/index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
+              <a href="../index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                 <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
                 </svg> Home </a>
@@ -308,7 +308,7 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">How to Apply These Terms to Your New Programs</h3>
           <p class="text-gray-600 mb-4"> If you develop a new program, and you want it to be of the greatest possible use to the public, the best way to achieve this is to make it free software which everyone can redistribute and change under these terms. </p>
           <p class="text-gray-600 mb-4"> To do so, attach the following notices to the program. It is safest to attach them to the start of each source file to most effectively state the exclusion of warranty; and each file should have at least the "copyright" line and a pointer to where the full notice is found. </p>
-          <p class="text-gray-600 mb-4"> For this please visit the full version of the project's <a href="https://github.com/ThatSINEWAVE/CDA-Project/blob/main/LICENSE" class="text-indigo-600 hover:text-indigo-800">License</a> on GitHub and copy the part below <b>How to Apply These Terms to Your New Programs</b>. </p>
+          <p class="text-gray-600 mb-4"> For this please visit the full version of the project's <a href="https://github.com/TheDARTProject/.github/blob/main/LICENSE" class="text-indigo-600 hover:text-indigo-800">License</a> on GitHub and copy the part below <b>How to Apply These Terms to Your New Programs</b>. </p>
         </div>
       </div>
     </div>
