--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -124,7 +124,7 @@
         <div class="container mx-auto flex justify-between items-center">
           <!-- Header Title -->
           <div>
-            <a href="/CDA-Project/index.html" class="block">
+            <a href="../index.html" class="block">
               <h1 class="text-2xl font-bold flex items-center"> DART Project <span class="text-amber-400 text-xs ml-2 align-top">BETA</span>
               </h1>
               <p class="text-sm text-gray-200">Tracking Threats, Protecting Communities</p>
@@ -178,7 +178,7 @@
           <ol class="inline-flex items-center space-x-2">
             <!-- Home Breadcrumb -->
             <li class="inline-flex items-center">
-              <a href="/CDA-Project/index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
+              <a href="../index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                 <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
                 </svg> Home </a>
@@ -201,7 +201,7 @@
         </p>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">1. Introduction</h3>
-          <p class="text-gray-600 mb-4">Welcome to the DART Project! This Privacy Policy outlines how I collect, use, and protect the data I gather from Discord servers that participate in the Compromised Discord Accounts (CDA) Project. By using our services, you agree to the collection and use of information in accordance with this policy.</p>
+          <p class="text-gray-600 mb-4">Welcome to the DART Project! This Privacy Policy outlines how I collect, use, and protect the data I gather from Discord servers that participate in the Discord Analytics for Risks & Threats (DART) Project. By using our services, you agree to the collection and use of information in accordance with this policy.</p>
         </div>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">2. Data Collection</h3>
@@ -283,7 +283,7 @@
               <strong>Public Awareness:</strong> To provide insights and reports on malicious activities to the broader community.
             </li>
             <li>
-              <strong>Prevention & Detection:</strong> To enhance the security of Discord servers that use the CDA Monitor Discord bot.
+              <strong>Prevention & Detection:</strong> To enhance the security of Discord servers that use the DART Monitor Discord app.
             </li>
           </ul>
         </div>
