--- a/legal/terms-of-service.html
+++ b/legal/terms-of-service.html
@@ -125,7 +125,7 @@
         <div class="container mx-auto flex justify-between items-center">
           <!-- Header Title -->
           <div>
-            <a href="/CDA-Project/index.html" class="block">
+            <a href="../index.html" class="block">
               <h1 class="text-2xl font-bold flex items-center"> DART Project <span class="text-amber-400 text-xs ml-2 align-top">BETA</span>
               </h1>
               <p class="text-sm text-gray-200">Tracking Threats, Protecting Communities</p>
@@ -179,7 +179,7 @@
           <ol class="inline-flex items-center space-x-2">
             <!-- Home Breadcrumb -->
             <li class="inline-flex items-center">
-              <a href="/CDA-Project/index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
+              <a href="../index.html" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                 <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"></path>
                 </svg> Home </a>
@@ -206,7 +206,7 @@
         </div>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">2. Description of Services</h3>
-          <p class="text-gray-600 mb-4">The DART Project provides a security dashboard that tracks, categorizes, and analyzes malicious activities on Discord, including compromised accounts, phishing campaigns, and suspicious URLs. The services include real-time threat monitoring, advanced analytics, and a unified processing engine inside the CDA Monitor Discord bot. The DART Project, including the website, CDA Monitor Discord bot, and data, are and will always be free as this is publicly accessible data and cannot be sold.</p>
+          <p class="text-gray-600 mb-4">The DART Project provides a security dashboard that tracks, categorizes, and analyzes malicious activities on Discord, including compromised accounts, phishing campaigns, and suspicious URLs. The services include real-time threat monitoring, advanced analytics, and a unified processing engine inside the Monitor Discord app. The DART Project, including the website, Monitor Discord app, and data, are and will always be free as this is publicly accessible data and cannot be sold.</p>
         </div>
         <div class="mb-8">
           <h3 class="text-2xl font-semibold text-gray-800 mb-4">3. Data Collection and Use</h3>
