--- a/index.html
+++ b/index.html
@@ -191,25 +191,133 @@
       </div>
     </div>
     <!-- Main Content -->
-    <div class="container mx-auto px-4 py-8 flex flex-col items-center justify-center h-[calc(100vh-8rem)]">
-      <div class="text-center">
-        <!-- Short Project Name with Beta Tag -->
-        <h1 class="text-6xl font-bold text-indigo-500 mb-4 flex items-center justify-center"> DART Project <span class="text-amber-600 text-sm font-extrabold ml-2 align-top bg-transparent">BETA</span>
-        </h1>
-        <!-- Tags -->
-        <div class="inline-block mb-6">
-          <!-- Full Project Name Tag -->
-          <span class="text-indigo-500 text-lg font-semibold px-4 py-2 rounded-full mb-6 inline-block bg-indigo-50"> The Discord Analytics for Risks & Threats Project </span>
+    <div class="container mx-auto px-4 py-8">
+      <div class="max-w-7xl mx-auto">
+        <!-- Hero Section -->
+        <div class="flex flex-col lg:flex-row items-center justify-between gap-12 py-12">
+          <!-- Left Column - Text Content -->
+          <div class="lg:w-1/2 space-y-8">
+            <div>
+              <h1 class="text-4xl md:text-5xl font-bold text-gray-900 leading-tight hero-title">
+                <span>The DART Project</span>
+                <span class="beta-tag">BETA</span>
+              </h1>
+              <p class="mt-4 text-lg text-gray-600 leading-relaxed dark:text-gray-300"> The Discord Analytics for Risks & Threats Project provides comprehensive monitoring and threat intelligence for Discord communities. Our platform detects, analyzes, and helps mitigate security risks in real-time. </p>
+            </div>
+            <!-- Action Buttons -->
+            <div class="flex flex-col sm:flex-row gap-2">
+              <a href="pages/dashboard.html" class="btn-primary">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                  <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z" />
+                  <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z" />
+                </svg> View Dashboard </a>
+              <a href="pages/database.html" class="btn-secondary dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd" />
+                </svg> Threat Database </a>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScSOBMym5zPiURWMfUzhTOv54i6I3M204RiCFt9wczuxadc8g/viewform?usp=dialog" class="btn-secondary dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
+                </svg> Join the Project </a>
+            </div>
+          </div>
+          <!-- Right Column - Illustration -->
+          <div class="lg:w-1/2">
+            <div class="dashboard-illustration-container dark:bg-gray-800 dark:border-gray-700">
+              <img id="dashboard-image" src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/main/site-images/HOME-IMAGE-LIGHT.png" alt="Security Dashboard Illustration" class="w-full h-auto" loading="lazy">
+            </div>
+          </div>
         </div>
-        <!-- Short Description -->
-        <p class="text-xl text-gray-700 leading-relaxed max-w-2xl mb-8"> A comprehensive security dashboard designed to track and analyze malicious activities across Discord servers<a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/easter-eggs/zwoco15yzf4fwf9w9oh4otp7clckj5ce.png" target="Easter Egg 3">.</a>
-        </p>
-        <!-- Buttons -->
-        <div class="flex flex-col md:flex-row justify-center items-center gap-4">
-          <!-- Dashboard Button -->
-          <a href="pages/dashboard.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl"> DASHBOARD </a>
-          <!-- Database Button -->
-          <a href="pages/database.html" class="bg-indigo-600 hover:bg-indigo-500 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors shadow-lg hover:shadow-xl"> DATABASE </a>
+        <!-- Stats Section -->
+        <div class="py-12 bg-white rounded-xl shadow-sm border border-gray-100 stats-section">
+          <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
+              <!-- Stat 1 - Threats Detected -->
+              <div class="text-center p-6">
+                <div id="threats-detected" class="text-4xl font-bold text-indigo-600">Loading...</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">THREATS DETECTED</div>
+              </div>
+              <!-- Stat 2 - Protected Servers -->
+              <div class="text-center p-6">
+                <div id="protected-servers" class="text-4xl font-bold text-indigo-600">Loading...</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">PROTECTED SERVERS</div>
+              </div>
+              <!-- Stat 3 - Monitoring -->
+              <div class="text-center p-6">
+                <div class="text-4xl font-bold text-indigo-600">24/7</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">MONITORING</div>
+              </div>
+              <!-- Stat 4 - Uptime -->
+              <div class="text-center p-6">
+                <div class="text-4xl font-bold text-indigo-600">99.9%</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">UPTIME</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Partners Section -->
+        <div class="py-12">
+          <div class="text-center mb-12">
+            <h2 class="text-2xl font-bold text-gray-900">Trusted By Leading Communities</h2>
+            <p class="mt-2 text-gray-600 max-w-2xl mx-auto">We partner with top Discord communities and projects to provide enhanced security and threat intelligence.</p>
+          </div>
+          <div class="partners-carousel-container">
+            <div class="partners-carousel">
+              <div class="partners-track flex items-center">
+                <!-- Partner logos will be inserted here by JavaScript -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Our Goals Section -->
+        <div class="py-12">
+          <div class="text-center mb-12">
+            <h2 class="text-2xl font-bold text-gray-900">Our Core Objectives</h2>
+            <p class="mt-2 text-gray-600 max-w-2xl mx-auto">The DART Project is built on three fundamental principles that guide our mission</p>
+          </div>
+          <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <!-- Goal 1 -->
+            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 dark:bg-gray-800 dark:border-gray-700">
+              <div class="text-indigo-600 dark:text-indigo-400 mb-4">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+                </svg>
+              </div>
+              <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Comprehensive Threat Intelligence</h3>
+              <p class="text-gray-600 dark:text-gray-300">Track and categorize malicious activities including compromised accounts, phishing campaigns, and suspicious URLs with our real-time monitoring system and unified processing engine.</p>
+            </div>
+            <!-- Goal 2 -->
+            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 dark:bg-gray-800 dark:border-gray-700">
+              <div class="text-indigo-600 dark:text-indigo-400 mb-4">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
+                </svg>
+              </div>
+              <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Advanced Analytics</h3>
+              <p class="text-gray-600 dark:text-gray-300">Identify patterns and correlations between different malicious activities with our sophisticated analytics, providing valuable insights for security professionals and researchers.</p>
+            </div>
+            <!-- Goal 3 -->
+            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 dark:bg-gray-800 dark:border-gray-700">
+              <div class="text-indigo-600 dark:text-indigo-400 mb-4">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+              </div>
+              <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Continuous Protection</h3>
+              <p class="text-gray-600 dark:text-gray-300">Our continuously updated database ensures access to the most current information on emerging threats and attack vectors, enhancing your defensive capabilities.</p>
+            </div>
+          </div>
+        </div>
+        <!-- CTA Section -->
+        <div class="py-12 bg-white rounded-xl shadow-sm border border-gray-100 px-4 sm:px-6 lg:px-8 text-center">
+          <h2 class="text-3xl font-bold text-gray-900">Ready to Secure Your Community?</h2>
+          <p class="mt-4 text-gray-600 max-w-2xl mx-auto"> Join the growing network of server owners and security-focused projects who trust the DART Project to protect their communities from malicious activity, scams, and other digital threats. Whether you're running a server or building tools to combat online abuse, we're here to collaborate. </p>
+          <div class="mt-8">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScSOBMym5zPiURWMfUzhTOv54i6I3M204RiCFt9wczuxadc8g/viewform?usp=dialog" class="inline-flex items-center px-6 py-3 border border-indigo-600 text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 transition"> Get Started Now <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 -mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -255,6 +363,10 @@
     <script src="assets/js/main.js" type="module"></script>
     <!-- Utilities Script -->
     <script src="assets/js/utils.js" type="module"></script>
+    <!-- Partners Carousel Script -->
+    <script src="assets/js/partners.js" type="module"></script>
+    <!-- Stats Counter Script -->
+    <script src="assets/js/stats-counter.js" type="module"></script>
     <!-- Context Menu Script -->
     <script src="assets/js/context-menu.js" type="module"></script>
     <!-- Announcements Script -->
