--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <!-- Stats Section -->
         <div class="py-12 bg-white rounded-xl shadow-sm border border-gray-100 stats-section">
           <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
+            <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-5">
               <!-- Stat 1 - Threats Detected -->
               <div class="text-center p-6">
                 <div id="threats-detected" class="text-4xl font-bold text-indigo-600">Loading...</div>
@@ -240,17 +240,22 @@
               <!-- Stat 2 - Protected Servers -->
               <div class="text-center p-6">
                 <div id="protected-servers" class="text-4xl font-bold text-indigo-600">Loading...</div>
-                <div class="mt-2 text-sm font-medium text-gray-500">PROTECTED SERVERS</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">MONITORED SERVERS</div>
               </div>
-              <!-- Stat 3 - Monitoring -->
+              <!-- Stat 3 - Total Members -->
+              <div class="text-center p-6">
+                  <div id="total-members" class="text-4xl font-bold text-indigo-600">Loading...</div>
+                  <div class="mt-2 text-sm font-medium text-gray-500">PROTECTED MEMBERS</div>
+              </div>
+              <!-- Stat 4 - Monitoring -->
               <div class="text-center p-6">
                 <div class="text-4xl font-bold text-indigo-600">24/7</div>
-                <div class="mt-2 text-sm font-medium text-gray-500">MONITORING</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">SURVEILLANCE</div>
               </div>
-              <!-- Stat 4 - Uptime -->
+              <!-- Stat 5 - Uptime -->
               <div class="text-center p-6">
                 <div class="text-4xl font-bold text-indigo-600">99.9%</div>
-                <div class="mt-2 text-sm font-medium text-gray-500">UPTIME</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">SYSTEM UPTIME</div>
               </div>
             </div>
           </div>
