updated home page text

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </svg>
               </div>
               <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Continuous Protection</h3>
-              <p class="text-gray-600 dark:text-gray-300">Our continuously updated database ensures access to the most current information on emerging threats and attack vectors, enhancing your defensive capabilities.</p>
+              <p class="text-gray-600 dark:text-gray-300">Our continuously updated database provides real-time access to the most current information on emerging threats, attack vectors and vulnerabilities, allowing you to stay ahead of potential risks.</p>
             </div>
           </div>
         </div>
