--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
             </div>
             <!-- Action Buttons -->
             <div class="flex flex-col sm:flex-row gap-2">
-              <a href="pages/dashboard.html" class="btn-primary">
+              <a href="pages/dashboard.html" class="btn-primary  dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                   <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z" />
                   <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z" />
                 </svg> View Dashboard </a>
-              <a href="pages/database.html" class="btn-secondary dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
+              <a href="pages/database.html" class="btn-primary dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z" clip-rule="evenodd" />
                 </svg> Threat Database </a>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLScSOBMym5zPiURWMfUzhTOv54i6I3M204RiCFt9wczuxadc8g/viewform?usp=dialog" class="btn-secondary dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScSOBMym5zPiURWMfUzhTOv54i6I3M204RiCFt9wczuxadc8g/viewform?usp=dialog" class="btn-primary dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
                 </svg> Join the Project </a>
