--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -657,39 +657,72 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="bg-indigo-700 text-white p-4 shadow-lg mt-8">
-      <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
-        <!-- Footer Text -->
-        <div class="mb-4 md:mb-0">
-          <p>Created by ThatSINEWAVE - SINEWAVE Development</p>
-          <p>© 2025 DART Project - The Discord Analytics for Risks & Threats Project</p>
+    <footer class="bg-indigo-800 text-white py-8 shadow-lg">
+      <div class="container mx-auto px-4">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+          <!-- Footer About -->
+          <div class="space-y-4">
+            <div class="flex items-center space-x-2">
+              <img id="footer-logo" src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/main/favicons/icon-144x144.png" alt="Icon" class="h-8 w-8 text-indigo-300">
+              <h3 class="text-xl font-bold">The DART Project</h3>
+            </div>
+            <p class="text-indigo-100">Tracking Threats, Protecting Communities</p>
+            <p class="text-sm text-indigo-200">© 2025 SINEWAVE Development. All rights reserved.</p>
+          </div>
+          <!-- Footer Links -->
+          <div class="grid grid-cols-2 gap-4">
+            <div>
+              <h4 class="text-lg font-semibold mb-3 text-indigo-300">Resources</h4>
+              <ul class="space-y-2">
+                <li><a href="dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a></li>
+                <li><a href="monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a></li>
+                <li><a href="threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a></li>
+                <li><a href="roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a></li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="text-lg font-semibold mb-3 text-indigo-300">Legal</h4>
+              <ul class="space-y-2">
+                <li><a href="../legal/privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a></li>
+                <li><a href="../legal/terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a></li>
+                <li><a href="../legal/security.html" class="text-indigo-100 hover:text-white transition">Project Security</a></li>
+                <li><a href="../legal/code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a></li>
+              </ul>
+            </div>
+          </div>
+          <!-- Footer Social -->
+          <div>
+            <h4 class="text-lg font-semibold mb-3 text-indigo-300">Connect With Us</h4>
+            <div class="flex space-x-4 mb-4">
+              <a href="https://github.com/TheDARTProject" class="bg-indigo-700 hover:bg-indigo-600 text-white p-2 rounded-full transition" aria-label="GitHub">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+                  <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                </svg>
+              </a>
+              <a href="https://discord.gg/2nHHHBWNDw" class="bg-indigo-700 hover:bg-indigo-600 text-white p-2 rounded-full transition" aria-label="Discord">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+                  <path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3847-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286z" />
+                </svg>
+              </a>
+              <a href="https://ko-fi.com/thatsinewave" class="bg-indigo-700 hover:bg-indigo-600 text-white p-2 rounded-full transition" aria-label="Support Us">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                </svg>
+              </a>
+              <a href="status.html" class="bg-indigo-700 hover:bg-indigo-600 text-white p-2 rounded-full transition" aria-label="Support Us">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
+                  <path d="M12 1L3 5v6c0 5.5 3.8 10.7 9 12 5.2-1.3 9-6.5 9-12V5l-9-4zm0 2.2l7 3.1v5.7c0 4.4-2.8 8.8-7 10-4.2-1.2-7-5.6-7-10V6.3l7-3.1zm-1 5.3v4h2V8.5h-2zm0 6v2h2v-2h-2z" />
+                </svg>
+              </a>
+            </div>
+            <div class="bg-indigo-900/30 p-4 rounded-lg">
+              <p class="text-sm text-indigo-100">Have questions or feedback?</p>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSesh6fzwdKBD-lf-h3nbHJ_1bP92EEbPVHW_MUQrgjuJDRU-w/viewform?usp=header" class="text-white font-medium hover:underline">Contact us</a>
+            </div>
+          </div>
         </div>
-        <!-- Footer Buttons -->
-        <div class="flex space-x-4">
-          <!-- Github Repo Button -->
-          <a href="https://github.com/TheDARTProject" class="hover:text-indigo-200 transition-colors" title="GitHub Repository">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
-            </svg>
-          </a>
-          <!-- Ko-Fi Button -->
-          <a href="https://ko-fi.com/thatsinewave" class="hover:text-indigo-200 transition-colors" title="Support Me">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
-            </svg>
-          </a>
-          <!-- Discord Button -->
-          <a href="https://discord.gg/2nHHHBWNDw" class="hover:text-indigo-200 transition-colors" title="Discord Server">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3847-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286z" />
-            </svg>
-          </a>
-          <!-- Status Button -->
-          <a href="status.html" class="hover:text-indigo-200 transition-colors" title="Status Page">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12 1L3 5v6c0 5.5 3.8 10.7 9 12 5.2-1.3 9-6.5 9-12V5l-9-4zm0 2.2l7 3.1v5.7c0 4.4-2.8 8.8-7 10-4.2-1.2-7-5.6-7-10V6.3l7-3.1zm-1 5.3v4h2V8.5h-2zm0 6v2h2v-2h-2z" />
-            </svg>
-          </a>
+        <div class="border-t border-indigo-700/50 mt-8 pt-6 text-center text-sm text-indigo-300">
+          <p>The Discord Analytics for Risks & Threats Project - Protecting communities since 2024</p>
         </div>
       </div>
     </footer>
