--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <h2 class="text-3xl font-bold text-gray-900">Ready to Secure Your Community?</h2>
           <p class="mt-4 text-gray-600 max-w-2xl mx-auto"> Join the growing network of server owners and security-focused projects who trust the DART Project to protect their communities from malicious activity, scams, and other digital threats. Whether you're running a server or building tools to combat online abuse, we're here to collaborate. </p>
           <div class="mt-8">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScSOBMym5zPiURWMfUzhTOv54i6I3M204RiCFt9wczuxadc8g/viewform?usp=dialog" class="inline-flex items-center px-6 py-3 border border-indigo-600 text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 transition"> Get Started Now <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 -mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScSOBMym5zPiURWMfUzhTOv54i6I3M204RiCFt9wczuxadc8g/viewform?usp=dialog" class="btn-primary dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700"> Get Started Now <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 -mr-1 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M10.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L12.586 11H5a1 1 0 110-2h7.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
               </svg>
             </a>
