updated stat cards on home page

--- a/index.html
+++ b/index.html
@@ -244,18 +244,18 @@
               </div>
               <!-- Stat 3 - Total Members -->
               <div class="text-center p-6">
-                  <div id="total-members" class="text-4xl font-bold text-indigo-600">Loading...</div>
-                  <div class="mt-2 text-sm font-medium text-gray-500">PROTECTED MEMBERS</div>
+                <div id="total-members" class="text-4xl font-bold text-indigo-600">Loading...</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">PROTECTED MEMBERS</div>
               </div>
-              <!-- Stat 4 - Monitoring -->
+              <!-- Stat 4 - Malicious URLs -->
               <div class="text-center p-6">
-                <div class="text-4xl font-bold text-indigo-600">24/7</div>
-                <div class="mt-2 text-sm font-medium text-gray-500">SURVEILLANCE</div>
+                <div id="malicious-urls" class="text-4xl font-bold text-indigo-600">Loading...</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">MALICIOUS URLS</div>
               </div>
-              <!-- Stat 5 - Uptime -->
+              <!-- Stat 5 - Malicious Servers -->
               <div class="text-center p-6">
-                <div class="text-4xl font-bold text-indigo-600">99.9%</div>
-                <div class="mt-2 text-sm font-medium text-gray-500">SYSTEM UPTIME</div>
+                <div id="malicious-servers" class="text-4xl font-bold text-indigo-600">Loading...</div>
+                <div class="mt-2 text-sm font-medium text-gray-500">MALICIOUS SERVERS</div>
               </div>
             </div>
           </div>
