upated formatting for footers

--- a/legal/terms-of-service.html
+++ b/legal/terms-of-service.html
@@ -322,19 +322,35 @@
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Resources</h4>
               <ul class="space-y-2">
-                <li><a href="../pages/dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a></li>
-                <li><a href="../pages/monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a></li>
-                <li><a href="../pages/threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a></li>
-                <li><a href="../pages/roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a></li>
+                <li>
+                  <a href="../pages/dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a>
+                </li>
+                <li>
+                  <a href="../pages/monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a>
+                </li>
+                <li>
+                  <a href="../pages/threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a>
+                </li>
+                <li>
+                  <a href="../pages/roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a>
+                </li>
               </ul>
             </div>
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Legal</h4>
               <ul class="space-y-2">
-                <li><a href="privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a></li>
-                <li><a href="terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a></li>
-                <li><a href="security.html" class="text-indigo-100 hover:text-white transition">Project Security</a></li>
-                <li><a href="code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a></li>
+                <li>
+                  <a href="privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a>
+                </li>
+                <li>
+                  <a href="security.html" class="text-indigo-100 hover:text-white transition">Project Security</a>
+                </li>
+                <li>
+                  <a href="code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a>
+                </li>
               </ul>
             </div>
           </div>
