--- a/pages/intelligence.html
+++ b/pages/intelligence.html
@@ -278,7 +278,9 @@
               </div>
             </div>
           </div>
-          <p class="text-gray-600 dark:text-gray-300 mb-6"><b>*IMPORTANT NOTE:</b> This page is in active development and PDF exporting only works correctly in Light Theme.</p>
+          <p class="text-gray-600 dark:text-gray-300 mb-6">
+            <b>*IMPORTANT NOTE:</b> This page is in active development and PDF exporting only works correctly in Light Theme.
+          </p>
           <div class="flex justify-center space-x-4">
             <button id="generateReport" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-2 rounded-md font-medium transition-colors shadow-md hover:shadow-lg"> Generate Report </button>
             <button id="exportReport" class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-md font-medium transition-colors shadow-md hover:shadow-lg"> Export as PDF </button>
@@ -410,7 +412,7 @@
     <script src="../assets/js/context-menu.js" type="module"></script>
     <!-- Utilities Script -->
     <script src="../assets/js/utils.js" type="module"></script>
-     <!-- Local Day.js Copy -->
+    <!-- Local Day.js Copy -->
     <script src="../assets/js/dayjs.min.js"></script>
     <!-- Load JSPDF.js Copy -->
     <script src="../assets/js/jspdf.umd.js"></script>
