--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
           <!-- Right Column - Illustration -->
           <div class="lg:w-1/2">
             <div class="dashboard-illustration-container dark:bg-gray-800 dark:border-gray-700">
-              <img id="dashboard-image" src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/main/site-images/HOME-IMAGE-LIGHT.png" alt="Security Dashboard Illustration" class="w-full h-auto" loading="lazy">
+              <a href="pages/dashboard.html">
+                <img id="dashboard-image" src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/main/site-images/HOME-IMAGE-LIGHT.png" alt="Security Dashboard Illustration" class="w-full h-auto" loading="lazy">
+              </a>
             </div>
           </div>
         </div>
@@ -344,19 +346,35 @@
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Resources</h4>
               <ul class="space-y-2">
-                <li><a href="pages/dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a></li>
-                <li><a href="pages/monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a></li>
-                <li><a href="pages/threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a></li>
-                <li><a href="pages/roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a></li>
+                <li>
+                  <a href="pages/dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a>
+                </li>
+                <li>
+                  <a href="pages/monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a>
+                </li>
+                <li>
+                  <a href="pages/threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a>
+                </li>
+                <li>
+                  <a href="pages/roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a>
+                </li>
               </ul>
             </div>
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Legal</h4>
               <ul class="space-y-2">
-                <li><a href="legal/privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a></li>
-                <li><a href="legal/terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a></li>
-                <li><a href="legal/security.html" class="text-indigo-100 hover:text-white transition">Project Security</a></li>
-                <li><a href="legal/code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a></li>
+                <li>
+                  <a href="legal/privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="legal/terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a>
+                </li>
+                <li>
+                  <a href="legal/security.html" class="text-indigo-100 hover:text-white transition">Project Security</a>
+                </li>
+                <li>
+                  <a href="legal/code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a>
+                </li>
               </ul>
             </div>
           </div>
