--- a/pages/faq.html
+++ b/pages/faq.html
@@ -221,7 +221,7 @@
           <!-- Question 5 -->
           <div class="bg-gray-50 p-6 rounded-lg">
             <h3 class="text-xl font-semibold text-indigo-600 mb-2">Is this project free?</h3>
-            <p class="text-gray-600">Yes, this project is and will remain free to access and use<a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/easter-eggs/oj4zk9evizvjno6jxrwrj7yd85799csr.png" target="Easter Egg 4">.</a> Our goal is to provide an open and accessible resource for security researchers and server owners. </p>
+            <p class="text-gray-600">Yes, this project is and will remain free to access and use <a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/easter-eggs/oj4zk9evizvjno6jxrwrj7yd85799csr.png" target="Easter Egg 4">.</a> Our goal is to provide an open and accessible resource for security researchers and server owners. </p>
           </div>
           <!-- Question 6 -->
           <div class="bg-gray-50 p-6 rounded-lg">
@@ -273,19 +273,35 @@
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Resources</h4>
               <ul class="space-y-2">
-                <li><a href="dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a></li>
-                <li><a href="monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a></li>
-                <li><a href="threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a></li>
-                <li><a href="roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a></li>
+                <li>
+                  <a href="dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a>
+                </li>
+                <li>
+                  <a href="monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a>
+                </li>
+                <li>
+                  <a href="threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a>
+                </li>
+                <li>
+                  <a href="roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a>
+                </li>
               </ul>
             </div>
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Legal</h4>
               <ul class="space-y-2">
-                <li><a href="../legal/privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a></li>
-                <li><a href="../legal/terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a></li>
-                <li><a href="../legal/security.html" class="text-indigo-100 hover:text-white transition">Project Security</a></li>
-                <li><a href="../legal/code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a></li>
+                <li>
+                  <a href="../legal/privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="../legal/terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a>
+                </li>
+                <li>
+                  <a href="../legal/security.html" class="text-indigo-100 hover:text-white transition">Project Security</a>
+                </li>
+                <li>
+                  <a href="../legal/code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a>
+                </li>
               </ul>
             </div>
           </div>
