--- a/pages/news.html
+++ b/pages/news.html
@@ -198,7 +198,7 @@
         <!-- Disclaimer Section -->
         <div class="bg-gray-50 p-6 rounded-lg mb-8">
           <h3 class="text-xl font-semibold text-indigo-600 mb-2">About This News Feed</h3>
-          <p class="text-gray-600 mb-4">The articles displayed below are fetched from a <strong>public RSS feed</strong> provided by Digital Vocano, a leading source of cybersecurity news and insights. This page is designed to aggregate and display the latest cybersecurity stories in an easy-to-read format<a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/easter-eggs/gmoawu25csuungjtqmdn95bhxld6stfc.png" target="Easter Egg 5">.</a>
+          <p class="text-gray-600 mb-4">The articles displayed below are fetched from a <strong>public RSS feed</strong> provided by Digital Vocano, a leading source of cybersecurity news and insights. This page is designed to aggregate and display the latest cybersecurity stories in an easy-to-read format <a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/easter-eggs/gmoawu25csuungjtqmdn95bhxld6stfc.png" target="Easter Egg 5">.</a>
           </p>
           <p class="text-gray-600">Please note that <strong>we are not affiliated with Digital Vocano or any other parties</strong> mentioned in these articles. The content is owned by its respective authors and publishers, and we do not claim any ownership or responsibility for the accuracy, completeness, or timeliness of the information provided. </p>
         </div>
@@ -356,19 +356,35 @@
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Resources</h4>
               <ul class="space-y-2">
-                <li><a href="dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a></li>
-                <li><a href="monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a></li>
-                <li><a href="threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a></li>
-                <li><a href="roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a></li>
+                <li>
+                  <a href="dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a>
+                </li>
+                <li>
+                  <a href="monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a>
+                </li>
+                <li>
+                  <a href="threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a>
+                </li>
+                <li>
+                  <a href="roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a>
+                </li>
               </ul>
             </div>
             <div>
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Legal</h4>
               <ul class="space-y-2">
-                <li><a href="../legal/privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a></li>
-                <li><a href="../legal/terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a></li>
-                <li><a href="../legal/security.html" class="text-indigo-100 hover:text-white transition">Project Security</a></li>
-                <li><a href="../legal/code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a></li>
+                <li>
+                  <a href="../legal/privacy-policy.html" class="text-indigo-100 hover:text-white transition">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="../legal/terms-of-service.html" class="text-indigo-100 hover:text-white transition">Terms of Service</a>
+                </li>
+                <li>
+                  <a href="../legal/security.html" class="text-indigo-100 hover:text-white transition">Project Security</a>
+                </li>
+                <li>
+                  <a href="../legal/code-of-conduct.html" class="text-indigo-100 hover:text-white transition">Code of Conduct</a>
+                </li>
               </ul>
             </div>
           </div>
