updated sidebar and footer

--- a/pages/threat-map.html
+++ b/pages/threat-map.html
@@ -62,37 +62,33 @@
         </button>
       </div>
       <nav class="sidebar-nav bg-indigo-700">
-        <!-- Main -->
-        <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Main</h3>
-        <ul class="mb-4">
-          <li>
-            <a href="../index.html" class="sidebar-link hover:bg-indigo-600">Home</a>
-          </li>
-          <li>
-            <a href="database.html" class="sidebar-link hover:bg-indigo-600">Database</a>
-          </li>
-        </ul>
         <!-- Monitoring -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Monitoring</h3>
         <ul class="mb-4">
           <li>
-            <a href="dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard</a>
+            <a href="dashboard.html" class="sidebar-link hover:bg-indigo-600">Dashboard View</a>
           </li>
           <li>
-            <a href="threat-map.html" class="sidebar-link hover:bg-indigo-600">Threat Map</a>
+            <a href="database.html" class="sidebar-link hover:bg-indigo-600">Threat Database</a>
           </li>
           <li>
-            <a href="intelligence.html" class="sidebar-link hover:bg-indigo-600">Intel Reports</a>
+            <a href="domain-analytics.html" class="sidebar-link hover:bg-indigo-600">Domain Analytics</a>
           </li>
           <li>
-            <a href="monitor-app.html" class="sidebar-link hover:bg-indigo-600">Discord App</a>
+            <a href="threat-map.html" class="sidebar-link hover:bg-indigo-600">Global Threat Map</a>
+          </li>
+          <li>
+            <a href="intelligence.html" class="sidebar-link hover:bg-indigo-600">Intelligence Reports</a>
+          </li>
+          <li>
+            <a href="monitor-app.html" class="sidebar-link hover:bg-indigo-600">Official Discord App</a>
           </li>
         </ul>
         <!-- Resources -->
         <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Resources</h3>
         <ul class="mb-4">
           <li>
-            <a href="info.html" class="sidebar-link hover:bg-indigo-600">Info Center</a>
+            <a href="info.html" class="sidebar-link hover:bg-indigo-600">Information Center</a>
           </li>
           <li>
             <a href="resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
@@ -101,17 +97,10 @@
             <a href="faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
-            <a href="news.html" class="sidebar-link hover:bg-indigo-600">Latest News</a>
+            <a href="news.html" class="sidebar-link hover:bg-indigo-600">Latest Cyber News</a>
           </li>
           <li>
-            <a href="changelog.html" class="sidebar-link hover:bg-indigo-600">Changelog</a>
-          </li>
-        </ul>
-        <!-- Planning -->
-        <h3 class="text-xs font-semibold text-indigo-200 uppercase px-4 pt-4 pb-2">Planning</h3>
-        <ul class="mb-4">
-          <li>
-            <a href="roadmap.html" class="sidebar-link hover:bg-indigo-600">Project Roadmap</a>
+            <a href="changelog.html" class="sidebar-link hover:bg-indigo-600">Project Changelog</a>
           </li>
         </ul>
       </nav>
@@ -334,16 +323,16 @@
               <h4 class="text-lg font-semibold mb-3 text-indigo-300">Resources</h4>
               <ul class="space-y-2">
                 <li>
-                  <a href="dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard</a>
+                  <a href="dashboard.html" class="text-indigo-100 hover:text-white transition">Dashboard View</a>
                 </li>
                 <li>
-                  <a href="monitor-app.html" class="text-indigo-100 hover:text-white transition">Monitor App</a>
+                  <a href="monitor-app.html" class="text-indigo-100 hover:text-white transition">Official Monitor App</a>
                 </li>
                 <li>
-                  <a href="threat-map.html" class="text-indigo-100 hover:text-white transition">Threat Map</a>
+                  <a href="threat-map.html" class="text-indigo-100 hover:text-white transition">Global Threat Map</a>
                 </li>
                 <li>
-                  <a href="roadmap.html" class="text-indigo-100 hover:text-white transition">Roadmap</a>
+                  <a href="domain-analytics.html" class="text-indigo-100 hover:text-white transition">Domains Analysis</a>
                 </li>
               </ul>
             </div>
