added new scam awareness page

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <a href="pages/resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="pages/scam-awareness.html" class="sidebar-link hover:bg-indigo-600">Scam Awareness</a>
           </li>
           <li>
-            <a href="pages/news.html" class="sidebar-link hover:bg-indigo-600">Latest Cyber News</a>
+            <a href="pages/faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
             <a href="pages/changelog.html" class="sidebar-link hover:bg-indigo-600">Project Changelog</a>
