--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -91,10 +91,10 @@
             <a href="resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="scam-awareness.html" class="sidebar-link hover:bg-indigo-600">Scam Awareness</a>
           </li>
           <li>
-            <a href="news.html" class="sidebar-link hover:bg-indigo-600">Latest Cyber News</a>
+            <a href="faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
             <a href="changelog.html" class="sidebar-link hover:bg-indigo-600">Project Changelog</a>
