--- a/pages/info.html
+++ b/pages/info.html
@@ -90,10 +90,10 @@
             <a href="resources.html" class="sidebar-link hover:bg-indigo-600">Resource Center</a>
           </li>
           <li>
-            <a href="faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
+            <a href="scam-awareness.html" class="sidebar-link hover:bg-indigo-600">Scam Awareness</a>
           </li>
           <li>
-            <a href="news.html" class="sidebar-link hover:bg-indigo-600">Latest Cyber News</a>
+            <a href="faq.html" class="sidebar-link hover:bg-indigo-600">Frequent Questions</a>
           </li>
           <li>
             <a href="changelog.html" class="sidebar-link hover:bg-indigo-600">Project Changelog</a>
@@ -287,6 +287,24 @@
                 <div>
                   <h4 class="text-lg font-semibold text-indigo-600">
                     <b>Project CW</b>
+                  </h4>
+                  <p class="text-gray-600"> Members</p>
+                  <p class="text-gray-600">Active Contributor</p>
+                  <p class="text-gray-600 case-count">- Cases Contributed</p>
+                </div>
+              </div>
+            </div>
+            <!-- Server Card: Banana -->
+            <div class="bg-gray-50 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow w-full md:w-5/12 lg:w-3/10 max-w-sm server-card">
+              <div class="flex items-center space-x-4">
+                <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
+                  <a href="https://discord.com/invite/projectcw" target="_blank" rel="noopener noreferrer">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/BANANA.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                  </a>
+                </div>
+                <div>
+                  <h4 class="text-lg font-semibold text-indigo-600">
+                    <b>Banana</b>
                   </h4>
                   <p class="text-gray-600"> Members</p>
                   <p class="text-gray-600">Active Contributor</p>
