fixed grammar issues

--- a/pages/scam-awareness.html
+++ b/pages/scam-awareness.html
@@ -465,13 +465,13 @@
           <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mb-6">
             <div class="bg-gray-50 p-4 rounded-lg">
               <h4 class="text-lg font-semibold text-indigo-600 mb-2">Primary Method</h4>
-              <p class="text-gray-600">Sending disguised URLs (often hidden with markdown formatting) that lead to fake login pages mimicking legitimate platforms.</p>
+              <p class="text-gray-600">Sending disguised URLs (often hidden with Markdown formatting) that lead to fake login pages mimicking legitimate platforms.</p>
             </div>
             <div class="bg-gray-50 p-4 rounded-lg">
               <h4 class="text-lg font-semibold text-indigo-600 mb-2">Characteristics</h4>
               <ul class="text-gray-600 list-disc pl-5">
-                <li>URLs hidden behind text using markdown formatting</li>
-                <li>Promises of free gift cards, in-game items, or other rewards</li>
+                <li>URLs hidden behind text using Markdown formatting</li>
+                <li>Promises of gift cards, in-game items, or other rewards</li>
                 <li>Messages often appear random and out of context</li>
                 <li>Usually sent from compromised accounts</li>
               </ul>
@@ -494,7 +494,7 @@
                 <li>Hover over links to see the actual destination before clicking</li>
                 <li>Check URL spelling carefully—scammers often use similar-looking domains</li>
                 <li>Access websites directly through official sources rather than clicking links</li>
-                <li>Use a password manager that won't auto-fill credentials on fake sites</li>
+                <li>Use a password manager that won't autofill credentials on fake sites</li>
               </ul>
             </div>
             <div class="bg-gray-50 p-6 rounded-lg mb-4">
