added new section to home page

--- a/index.html
+++ b/index.html
@@ -304,6 +304,64 @@
             </div>
           </div>
         </div>
+        <!-- Quick Actions Section -->
+        <div class="py-12">
+          <div class="text-center mb-12">
+            <h2 class="text-2xl font-bold text-gray-900">Quick Actions</h2>
+            <p class="mt-2 text-gray-600 max-w-2xl mx-auto">Need immediate assistance? Here are some quick ways to resolve common issues</p>
+          </div>
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <!-- Found Yourself in Database Card -->
+            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 dark:bg-gray-800 dark:border-gray-700">
+              <div class="text-indigo-600 dark:text-indigo-400 mb-4">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4" />
+                </svg>
+              </div>
+              <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Found Yourself in Our Database?</h3>
+              <p class="text-gray-600 dark:text-gray-300 mb-4">
+                If you've discovered your account in our threat database, it likely means your account was compromised at some point. To confirm you're no longer at risk and update your case status:
+              </p>
+              <ol class="list-decimal list-inside text-gray-600 dark:text-gray-300 mb-4 space-y-2">
+                <li>Change your Discord password immediately</li>
+                <li>Enable two-factor authentication</li>
+                <li>Revoke any suspicious authorized apps</li>
+                <li>Contact us to establish proof of recovery</li>
+              </ol>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSecxrjcXHAIaNWahtXhGPiJcupUNVnkqyZn8qmXvjOX-cZGWA/viewform?usp=dialog" class="btn-primary inline-flex items-center dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
+                </svg>
+                Request Account Review
+              </a>
+            </div>
+            <!-- Report Scam Card -->
+            <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 dark:bg-gray-800 dark:border-gray-700">
+              <div class="text-indigo-600 dark:text-indigo-400 mb-4">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                </svg>
+              </div>
+              <h3 class="text-xl font-bold text-gray-900 dark:text-white mb-2">Got a Scam to Report?</h3>
+              <p class="text-gray-600 dark:text-gray-300 mb-4">
+                Help us protect the community by reporting suspicious activity. When reporting, please include:
+              </p>
+              <ul class="list-disc list-inside text-gray-600 dark:text-gray-300 mb-4 space-y-2">
+                <li>Screenshots of the suspicious messages or profiles</li>
+                <li>Any links involved (don't click them!)</li>
+                <li>Discord ID of the suspicious account</li>
+                <li>Description of what happened</li>
+                <li>Timestamp of when it occurred</li>
+              </ul>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSfGMGTyP6kCr46hvvRwm6ZilJR2xBuTZ2ZZpSBMe3x8wrzaTA/viewform?usp=dialog" class="btn-primary inline-flex items-center dark:bg-gray-800 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+                </svg>
+                Report Suspicious Activity
+              </a>
+            </div>
+          </div>
+        </div>
         <!-- CTA Section -->
         <div class="py-12 bg-white rounded-xl shadow-sm border border-gray-100 px-4 sm:px-6 lg:px-8 text-center">
           <h2 class="text-3xl font-bold text-gray-900">Ready to Secure Your Community?</h2>
