fixed image issues

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <span>The DART Project</span>
                 <span class="beta-tag">BETA</span>
               </h1>
-              <p class="mt-4 text-lg text-gray-600 leading-relaxed dark:text-gray-300"> The Discord Analytics for Risks & Threats Project provides comprehensive monitoring and threat intelligence for Discord communities. Our platform detects, analyzes, and helps mitigate security risks in real-time. </p>
+              <p class="mt-4 text-lg text-gray-600 leading-relaxed dark:text-gray-300"> The Discord Analytics for Risks & Threats Project provides comprehensive monitoring and threat intelligence for Discord communities. Our platform detects, analyzes, and helps mitigate security risks in real-time<a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/easter-eggs/zwoco15yzf4fwf9w9oh4otp7clckj5ce.png" target="Easter Egg 3">.</a></p>
             </div>
             <!-- Action Buttons -->
             <div class="flex flex-col sm:flex-row gap-2">
