--- a/pages/intelligence.html
+++ b/pages/intelligence.html
@@ -268,7 +268,7 @@
             </div>
           </div>
           <p class="text-gray-600 dark:text-gray-300 mb-6">
-            <b>*IMPORTANT NOTE:</b> This page is in active development and PDF exporting only works correctly in Light Theme.
+            <b>*IMPORTANT NOTE:</b> This page is in active development and PDF exporting only works correctly in Light Theme<a href="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/easter-eggs/gmoawu25csuungjtqmdn95bhxld6stfc.png" target="Easter Egg 5">.</a>
           </p>
           <div class="flex justify-center space-x-4">
             <button id="generateReport" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-2 rounded-md font-medium transition-colors shadow-md hover:shadow-lg"> Generate Report </button>
