renamed project cw server to world of tanks heat in main website

--- a/pages/info.html
+++ b/pages/info.html
@@ -276,17 +276,17 @@
             </li>
           </ul>
           <div class="flex flex-wrap justify-center gap-6">
-            <!-- Server Card: Project CW -->
+            <!-- Server Card: World of Tanks: HEAT -->
             <div class="bg-gray-50 p-6 rounded-lg shadow-sm hover:shadow-md transition-shadow w-full md:w-5/12 lg:w-3/10 max-w-sm server-card">
               <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0 w-12 h-12 rounded-full overflow-hidden">
-                  <a href="https://discord.com/invite/projectcw" target="_blank" rel="noopener noreferrer">
-                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/PROJECT_CW.png" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
+                  <a href="https://discord.com/invite/wot-heat" target="_blank" rel="noopener noreferrer">
+                    <img src="https://raw.githubusercontent.com/TheDARTProject/Website-Images/refs/heads/main/server-images/WOT_HEAT.gif" alt="Server Icon" class="discord-server-icon w-full h-full object-cover">
                   </a>
                 </div>
                 <div>
                   <h4 class="text-lg font-semibold text-indigo-600">
-                    <b>Project CW</b>
+                    <b>World of Tanks: HEAT</b>
                   </h4>
                   <p class="text-gray-600"> Members</p>
                   <p class="text-gray-600">Active Contributor</p>
